IGNITE-19645 Suppress an illegal reflective access runtime warning for JDK11