@@ -51,8 +51,14 @@ getJavaSpecificOpts() {
           --add-opens=java.base/java.io=ALL-UNNAMED \
           --add-opens=java.base/java.nio=ALL-UNNAMED \
           --add-opens=java.base/java.util=ALL-UNNAMED \
+          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
+          --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED \
+          --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED \
           --add-opens=java.base/java.lang=ALL-UNNAMED \
+          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+          --add-opens=java.base/java.math=ALL-UNNAMED \
           --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+          --add-opens=java.sql/java.sql=ALL-UNNAMED \
           --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
           --illegal-access=permit \
           ${current_value}"
